<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TagFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_info_tag">InfoTagActivity</string>
    <string name="copyright">  Copyright &#169; ESEO &amp; Tagsys RFID - All rights reserved.</string>

    <!-- Label strings -->
    <string name="tag_name_text">Tag name</string>
    <string name="tag_id_text">Tag ID</string>
    <string name="tag_info_text">Tag Information</string>
    <string name="tag_date_text">Added on</string>

    <!-- Wifi AlertDialog strings -->
    <string name="wifi_dialog_title">Wifi is not enabled!</string>
    <string name="wifi_dialog_message">Do you want to enable wifi ?</string>
    <string name="wifi_dialog_yes">Yes</string>
    <string name="wifi_dialog_no">No</string>

    <!-- Activity result strings -->
    <string name="result_error">Error unexpected activity result. Exiting.</string>

    <!-- Colors -->
    <color name="main_theme_blue">#03A5FF</color>
    <color name="main_theme_grey">#f04f4f4f</color>
    <color name="main_theme_white">#DDDDDD</color>
    <color name="main_theme_green">#20B2AA</color>
    <color name="main_theme_dark_grey">#303030</color>



    <!-- Content description -->
    <string name="top_bar_description">The top bar of all UI</string>
    <string name="bottom_bar_description">The bottom bar of this screen</string>
    <string name="logo_description">Logo of the application</string>
    <string name="back_button_description">Button that allow to go back</string>

    <!-- Button strings -->
    <string name="scan_tag">SCAN</string>
    <string name="scanning_tag">SCANNING</string>
    <string name="done_scanning_tag">DONE</string>

    <!-- AddtagActivty strings -->
    <string name="toast_empty_field">Please fill Tag name and Tag ID</string>

    <string name="toast_no_wifi">Wifi is not enabled. You can\'t add a tag.</string>
    <string name="toast_no_wifi2">Wifi is not enabled. You can\'t search a tag.</string>

    <string name="fake_tag_id">Pierre est un con</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- SearchActivity Strings -->
    <string name="speed_too_high">Slow down</string>
    <string name="calibration_finished">Calibration complete</string>
    <string name="scan_finished">Scan complete</string>
    <string name="guiding_information">Follow given directions and sweep
        around to targetted direction</string>
    <string name="scan_information">Keep the phone horizontal and slowly
        make a 360 degrees turn</string>
        <string name="calibration_information">Please keep the phone still and horizontal,
        then tap the blue radar</string>
    <string name="scan_failed">Sorry, your tag can\'t be found</string>

    <!-- Delete AlertDialog strings -->
    <string name="delete_dialog_title">Confirm Removal</string>
    <string name="delete_dialog_message">Do you confirm the suppression of the tag ?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

</resources>
