<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".StartActivity"
    android:id="@+id/startActivity"
    android:background="@color/background_material_dark">

    <ImageView
        android:id="@+id/top_bar"
        android:src="@drawable/top_bar"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="@color/main_theme_grey">
    </ImageView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/top_bar">

        <ImageView
            android:id="@+id/logo_tagfinder"
            android:src="@drawable/ic_tagfinder"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/backButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_button_white"
            android:background="#00ffffff"
            android:longClickable="false"
            android:scaleType="fitEnd"
            android:layout_alignParentRight="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/radarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottomBarLayout">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/radar_background"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/relativeLayout3"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/bottomBarLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/bottomBar"
            android:src="@drawable/top_bar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/main_theme_grey"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </ImageView>

        <TextView
            android:id="@+id/tagNameText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tag_name_text"
            android:textColor="@color/main_theme_white"
            android:gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tagName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tag_name_text"
            android:textColor="@color/main_theme_blue"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tagIdText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tag_id_text"
            android:textColor="@color/main_theme_white"
            android:gravity="right"
            android:layout_below="@+id/tagNameText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tagId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tag_id_text"
            android:textColor="@color/main_theme_blue"
            android:layout_below="@+id/tagName"
            android:layout_toRightOf="@+id/tagNameText"
            android:layout_toEndOf="@+id/tagNameText" />

        <TextView
            android:id="@+id/tagDateText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tag_date_text"
            android:textColor="@color/main_theme_white"
            android:gravity="right"
            android:layout_below="@+id/tagIdText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tagInfoText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tag_info_text"
            android:textColor="@color/main_theme_white"
            android:gravity="right"
            android:layout_below="@+id/tagDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tagDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="dsafcasdfsdfgdsfgvsdfwdfsdfsdafddddddddfgasjdbchvasmdbcvmnbdv"
            android:textColor="@color/main_theme_blue"
            android:layout_alignTop="@+id/tagDateText"
            android:layout_toRightOf="@+id/tagDateText"
            android:layout_toEndOf="@+id/tagDateText" />

        <TextView
            android:id="@+id/tagInfo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tag_info_text"
            android:textColor="@color/main_theme_blue"
            android:layout_below="@+id/tagDate"
            android:layout_toRightOf="@+id/tagInfoText"
            android:layout_toEndOf="@+id/tagInfoText"
            />


    </RelativeLayout>


</RelativeLayout>
