<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".StartActivity"
    android:id="@+id/startActivity"
    android:background="@color/background_material_dark">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/top_bar"
            android:src="@drawable/top_bar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/main_theme_grey">
        </ImageView>
        <ImageView
            android:id="@+id/top_bar_shadow"
            android:src="@drawable/top_bar_shadow"
            android:layout_below="@id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_toLeftOf="@+id/backButton"
            android:id="@+id/linearLayout">

            <ImageView
                android:id="@+id/logo_tagfinder"
                android:src="@drawable/ic_tagfinder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                />

        </LinearLayout>

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_button_white"
            android:background="#00ffffff"
            android:longClickable="false"
            android:scaleType="fitEnd"
            android:layout_alignParentRight="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/validButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/valid_icon_white"
            android:background="#00ffffff"
            android:longClickable="false"
            android:scaleType="fitStart"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlSymmetry"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_toEndOf="@+id/linearLayout" />

    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:layout_below="@+id/relativeLayout"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp">

            <TextView
                android:id="@+id/tagNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tag_name_text"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tagIdLayout"
                android:textColor="@color/main_theme_white"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/tagNameField"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_theme_white"
                android:background="@color/main_theme_grey"
                android:padding="5dp"
                android:minHeight="40dp"
                android:minWidth="300dp"
                android:layout_below="@+id/tagNameText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/tagIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tag_id_text"
                android:textColor="@color/main_theme_white"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true" />

            <RelativeLayout
                android:id="@+id/tagIdLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tagIdText"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:imeOptions="actionNext">

                <EditText
                    android:id="@+id/tagIdField"
                    android:inputType="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tagIdText"
                    android:background="@color/main_theme_grey"
                    android:minHeight="40dp"
                    android:minWidth="200dp"
                    android:textColor="@color/main_theme_white"
                    android:padding="5dp"
                    android:layout_toLeftOf="@+id/scanTagButton"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:focusable="false"/>

                <Button
                    android:id="@+id/scanTagButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textSize="12sp"
                    android:background="@color/main_theme_grey"
                    android:text="@string/scan_tag"
                    android:textColor="@color/main_theme_blue"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                </RelativeLayout>


            <TextView
                android:id="@+id/tagDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tagNameField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tag_info_text"
                android:layout_marginTop="20dp"
                android:textColor="@color/main_theme_white"
                android:layout_centerHorizontal="true"
                />

            <EditText
                android:id="@+id/tagDataField"
                android:inputType="textAutoCorrect"
                android:layout_below="@+id/tagDataText"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@color/main_theme_grey"
                android:textColor="@color/main_theme_white"
                android:minLines="4"
                android:minWidth="300dp"
                android:padding="5dp"
                android:gravity="top"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
